--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
 									<h3>HARSH SEWANI</h3>
-									<h4>ML Enthusiast | Python Programer</h4>
+									<h4>ML Enthusiast | Python Programmer</h4>
 									<p>I love solving problems using Machine Learning and python.Data in a meaningful way. Also, I like pushing myself and taking up new challenges.</p>
 									<ul class="list basic_info">
 										<!-- <li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
